[tool.poetry]
name = "prometheus-exporter-celery"
version = "0.11.0"
description = ""
authors = [
	"Dani Hodovic <dani.hodovic@gmail.com>",
	"Adin Hodovic <adin@email.com>",
]
license = "MIT"
packages = [
    { include = "src" },
]
readme = "README.md"
repository = "https://github.com/danihodovic/celery-exporter"
documentation = "https://github.com/danihodovic/celery-exporter"
keywords = ["celery", "task-processing", "prometheus", "grafana", "monitoring"]
classifiers = [
	"Topic :: System :: Monitoring",
	"Topic :: System :: Systems Administration",
	"Topic :: System :: Distributed Computing",
	"Framework :: Celery",
	"Framework :: Django",
]

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv,.poetry,.poetry-cache'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
celery = "^5.4.0"
prometheus-client = "^0.20.0"
click = "^8.1.7"
pretty-errors = "^1.2.19"
loguru = "^0.7.2"
redis = "^5.0.4"
Flask = "^3.0.3"
waitress = "^3.0.0"
arrow = "^1.3.0"
timy = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.3.0"
isort = "^5.13.2"
jedi = "^0.19.1"
pudb = "^2020.1"
requests = "^2.32.3"
pytest-cov = "^4.1.0"
ptpython = "^3.0.25"
pytest-mock = "^3.12.0"
pyinstaller = "^5.13.1"
mypy = "^1.8.0"
types-requests = "^2"
types-waitress = "^2.1.4.20240106"
celery-types = "^0.11.0"
pre-commit = "^2.19.0"
pytest-celery = "^0.0.0"
pylint = "^3.0.3"
certifi = "^2024.2.2"
idna = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
