[tool.poetry]
name = "prometheus-exporter-celery"
version = "0.12.2"
description = ""
authors = [
	"Dani Hodovic <dani.hodovic@gmail.com>",
	"Adin Hodovic <adin@email.com>",
]
license = "MIT"
packages = [
    { include = "src" },
]
readme = "README.md"
repository = "https://github.com/danihodovic/celery-exporter"
documentation = "https://github.com/danihodovic/celery-exporter"
keywords = ["celery", "task-processing", "prometheus", "grafana", "monitoring"]
classifiers = [
	"Topic :: System :: Monitoring",
	"Topic :: System :: Systems Administration",
	"Topic :: System :: Distributed Computing",
	"Framework :: Celery",
	"Framework :: Django",
]

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv,.poetry,.poetry-cache'

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
celery = "^5.6.0"
prometheus-client = "^0.23.1"
click = "^8.3.1"
pretty-errors = "^1.2.25"
loguru = "^0.7.3"
redis = "^7.1.0"
Flask = "^3.1.2"
waitress = "^3.0.2"
arrow = "^1.4.0"
timy = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
isort = "^7.0.0"
jedi = "^0.19.2"
pudb = "^2025.1.5"
requests = "^2.32.5"
pytest-cov = "^7.0.0"
ptpython = "^3.0.32"
pytest-mock = "^3.15.1"
pyinstaller = "^6.17.0"
mypy = "^1.19.0"
types-requests = "^2"
types-waitress = "^3.0.1.20250801"
celery-types = "^0.23.0"
pre-commit = "^2.19.0"
pytest-celery = "^1.2.1"
pylint = "^4.0.4"
certifi = "^2025.11.12"
idna = "^3.11"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
